codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"▌ this is a test reason such as one that would be produced by the model         "
"▌                                                                               "
"▌ Allow command?                                                                "
"▌[Y] Yes  Approve and run the command                                           "
"▌[A] Always  Approve the command for the remainder of this session              "
"▌[N] No, provide feedback  Do not run the command; provide feedback             "
"                                                                                "
