codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec_no_reason.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"▌                                                                               "
"▌ Allow command?                                                                "
"▌[Y] Yes  Approve and run the command                                           "
"▌[A] Always  Approve the command for the remainder of this session              "
"▌[N] No, provide feedback  Do not run the command; provide feedback             "
"                                                                                "
