codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"▌ The model wants to apply changes                                              "
"▌                                                                               "
"▌ This will grant write access to /tmp for the remainder of this session.       "
"▌                                                                               "
"▌ Apply changes?                                                                "
"▌[Y] Yes  Approve and apply the changes                                         "
"▌[N] No, provide feedback  Do not apply the changes; provide feedback           "
"                                                                                "
